tests/ui/consts/miri_unleashed/ptr_arith.stderr
error[E0080]: exposing pointers is not possible at compile-time
  --> $DIR/ptr_arith.rs:7:13
   |
LL |     let x = &0 as *const _ as usize;
   |             ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of static initializer failed here

error[E0080]: unable to turn pointer into integer
  --> $DIR/ptr_arith.rs:14:14
   |
LL |     let _v = x + 0;
   |              ^ evaluation of static initializer failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/ptr_arith.rs:7:13
   |
LL |     let x = &0 as *const _ as usize;
   |             ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
